# sandbox-lang

./: .gitignore  CLAUDE.md  Modelfile  README.md  chat.py  config.yaml  langchain-chatbot-simple.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  setup_env.sh
backend/: chat_history.db
backend/app/: chat_service.py  database.py  main.py  models.py
backend/app/routes/: chat.py  conversations.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/Chat/: ChatInterface.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/components/Sidebar/: ConversationItem.tsx  ConversationSidebar.tsx
frontend/src/components/UI/: CopyButton.tsx  LoadingSpinner.tsx  ThemeToggle.tsx
frontend/src/hooks/: useChat.ts  useConversations.ts  useTheme.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
nb/: langchain-chatbot-simple.ipynb
spec/: spec_README.md  spec_chat_llm_webapp.md  spec_chat_llm_workflow.md
